Inject viewmodel and use directly, show text to not close the app

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -1,12 +1,13 @@
 ﻿@page "/generate-wallet-with-password"
 
 @inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
-@inject INavigationService navigationService
+@inject INavigationService NavigationService
 
 <MudThemeProvider />
 
-    <MudOverlay @bind-Visible="isProgressBarVisible" DarkBackground="true">
+    <MudOverlay Visible="ViewModel.IsLoading" DarkBackground="true">
         <MudProgressCircular Color="Color.Primary" Style="height:170px;width:170px;" Indeterminate="true" />
+        <MudText>@ViewModel.WalletCreationProgress</MudText>
     </MudOverlay>
     <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
         <DataAnnotationsValidator />
@@ -22,38 +23,24 @@
                     </MudCardContent>
                     <MudCardActions>
                         <MudButton ButtonType="MudBlazor.ButtonType.Submit"
-                                    Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">Create Your Wallet</MudButton>
+                                   Variant="MudBlazor.Variant.Filled" Color="Color.Primary" Class="ml-auto">Create Your Wallet</MudButton>
                     </MudCardActions>
                 </MudCard>
             </MudItem>
         </MudGrid>
     </EditForm>
 @code {
-    GenerateWalletWithPasswordViewModel generateWalletWithPasswordViewModel;
-
     PasswordForm model = new PasswordForm();
-
-    private bool isProgressBarVisible = false;
-
-    protected override void OnInitialized()
-    {
-        generateWalletWithPasswordViewModel = ViewModel;
-    }
 
     private async Task OnValidSubmit(EditContext context)
     {
-        isProgressBarVisible = true;
+        await InvokeAsync(() => StateHasChanged());
+
+        ViewModel.Password = model.Password;
+        await ViewModel.SubmitCommand.ExecuteAsync(null);
 
         await InvokeAsync(() => StateHasChanged());
 
-        generateWalletWithPasswordViewModel.Password = model.Password;
-
-        await generateWalletWithPasswordViewModel.SubmitCommand.ExecuteAsync(null);
-
-        isProgressBarVisible = false;
-
-        await InvokeAsync(() => StateHasChanged());
-
-        await navigationService.NavigateTo<MainWithAccountViewModel>(true);
+        await NavigationService.NavigateTo<MainWithAccountViewModel>(true);
     }
 }
