Fix account loading twice because of incorrent IsRefreshingUsage
IsRefreshing should not be bound to true because this triggers a refresh. Previously it was bound to IsLoading, thus when this was set to true, a refresh was triggered. So when the page was initializing, it was refreshing twice simultaneously. The first time the wallet opens the CPU is hit hard to decrypt the wallet, so doing it twice was killing performance.

Now, the loading happens once per initialization and refreshing works as expected. Also, the default loading spinner is visible once again.

Last but not least, the view initialisation doesn't invoke the viewmodel's Initialize method during OnAppearing. Instead, IsRefreshing is bound to true after 10 milliseconds thus triggering the 1st load after the UI appears.

--- a/BolWallet/Views/MainWithAccountPage.xaml
+++ b/BolWallet/Views/MainWithAccountPage.xaml
@@ -25,6 +25,7 @@
             RowSpacing="25"
             ColumnSpacing="8">
 			<StackLayout Grid.Row="2" Grid.ColumnSpan="3" IsVisible="{OnPlatform False, WinUI=True}" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+	<RefreshView Command="{Binding InitializeCommand}" IsRefreshing="{Binding IsRefreshing}">
 					<ActivityIndicator IsVisible="{Binding IsLoading}" IsRunning="True" />
 			</StackLayout>
 			<StackLayout IsVisible="{Binding IsLoading, Converter={StaticResource InverseBooleanConverter}}" Grid.Row="0" Grid.ColumnSpan="3" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Spacing="15" Padding="20">
