Validate Nin per country selection

--- a/BolWallet/_Imports.razor
+++ b/BolWallet/_Imports.razor
@@ -4,6 +4,7 @@
 @using System.Reflection
 @using System.Numerics
 @using System.Globalization
+@using System.Text.RegularExpressions
 
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
