--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -6,56 +6,58 @@
 
 <MudThemeProvider />
 
-<MudGrid >
+<MudGrid>
     <MudItem xs="12" sm="7" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
         <Virtualize Items="EncryptedCitizenshipForms" Context="encryptedCitizenshipForm">
             <MudCard>
                 <MudCardContent>
                     <MudText Typo="Typo.h6">@encryptedCitizenshipForm.CountryName</MudText>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" @bind-Value="@encryptedCitizenshipForm.CountryCode" Variant="MudBlazor.Variant.Outlined" Disabled=true Label="CountryCode" OnlyValidateIfDirty="true"
-                                      Margin="@Margin.Dense" Required="true" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="First Name" OnlyValidateIfDirty="true"
-                                      @bind-Value="@encryptedCitizenshipForm.FirstName" OnBlur="@(x=> encryptedCitizenshipForm.FirstName= encryptedCitizenshipForm.FirstName?.Trim().ToUpper())"
-                                      Margin="@Margin.Dense" Required="true" RequiredError="First name is required!" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="Surname" OnlyValidateIfDirty="true"
-                                      @bind-Value="@encryptedCitizenshipForm.SurName" OnBlur="@(x=> encryptedCitizenshipForm.SurName= encryptedCitizenshipForm.SurName?.Trim().ToUpper())"
-                                      Margin="@Margin.Dense" Required="true" RequiredError="Surname is required!" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
-                                      Margin="@Margin.Dense" Label="Middle Name" @bind-Value="@encryptedCitizenshipForm.SecondName"
-                                      OnBlur="@(x=> encryptedCitizenshipForm.SecondName= encryptedCitizenshipForm.SecondName?.Trim().ToUpper())" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
-                                      Margin="@Margin.Dense" Label="Third Name" @bind-Value="@encryptedCitizenshipForm.ThirdName"
-                                      OnBlur="@(x=> encryptedCitizenshipForm.ThirdName= encryptedCitizenshipForm.ThirdName?.Trim().ToUpper())" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudDatePicker Label="Birth Date(yyyy-MM-dd)" @bind-Value="@encryptedCitizenshipForm.BirthDate" Editable="true" Variant="MudBlazor.Variant.Outlined"
-                                       Margin="@Margin.Dense"
-                                       MinDate="new DateTime(1900, 1, 1)" MaxDate="new DateTime(lastYear, 12, 31)"
-                                       Mask="@(new DateMask("0000-00-00"))" DateFormat="yyyy-MM-dd" Placeholder="Birth Date(yyyy-MM-dd)" />
-                    </MudItem>
-                    <MudItem xs="12" sm="12" md="12">
-                        <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="NIN" @bind-Value="@encryptedCitizenshipForm.Nin"
-                                      Margin="@Margin.Dense" OnlyValidateIfDirty="true" HelperText="@NinHelperText"
-                                      Immediate="true" Required="true"
-                                      Validation="@(new Func<string, string>(NINCheck))" />
-                    </MudItem>
-                </MudCardContent>
-            </MudCard>
-        </Virtualize>
-    </MudItem>
-</MudGrid>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" @bind-Value="@encryptedCitizenshipForm.CountryCode" Variant="MudBlazor.Variant.Outlined" Disabled=true Label="CountryCode" OnlyValidateIfDirty="true"
+                                          Margin="@Margin.Dense" Required="true" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="First Name" OnlyValidateIfDirty="true"
+                                          @bind-Value="@encryptedCitizenshipForm.FirstName" OnBlur="@(x=> encryptedCitizenshipForm.FirstName= encryptedCitizenshipForm.FirstName?.Trim().ToUpper())"
+                                          Margin="@Margin.Dense" Required="true" RequiredError="First name is required!" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="Surname" OnlyValidateIfDirty="true"
+                                          @bind-Value="@encryptedCitizenshipForm.SurName" OnBlur="@(x=> encryptedCitizenshipForm.SurName= encryptedCitizenshipForm.SurName?.Trim().ToUpper())"
+                                          Margin="@Margin.Dense" Required="true" RequiredError="Surname is required!" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
+                                          Margin="@Margin.Dense" Label="Middle Name" @bind-Value="@encryptedCitizenshipForm.SecondName"
+                                          OnBlur="@(x=> encryptedCitizenshipForm.SecondName= encryptedCitizenshipForm.SecondName?.Trim().ToUpper())" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined"
+                                          Margin="@Margin.Dense" Label="Third Name" @bind-Value="@encryptedCitizenshipForm.ThirdName"
+                                          OnBlur="@(x=> encryptedCitizenshipForm.ThirdName= encryptedCitizenshipForm.ThirdName?.Trim().ToUpper())" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudDatePicker Label="Birth Date(yyyy-MM-dd)" @bind-Value="@encryptedCitizenshipForm.BirthDate" Editable="true" Variant="MudBlazor.Variant.Outlined"
+                                           Margin="@Margin.Dense"
+                                           MinDate="new DateTime(1900, 1, 1)" MaxDate="new DateTime(lastYear, 12, 31)"
+                                           Mask="@(new DateMask("0000-00-00"))" DateFormat="yyyy-MM-dd" Placeholder="Birth Date(yyyy-MM-dd)" />
+                        </MudItem>
+                        <MudItem xs="12" sm="12" md="12">
+                            <MudTextField T="string" Variant="MudBlazor.Variant.Outlined" Label="NIN" @bind-Value="@encryptedCitizenshipForm.Nin"
+                                          Margin="@Margin.Dense" OnlyValidateIfDirty="false" HelperText="@_content.NinPerCountryCode[encryptedCitizenshipForm.CountryCode].InternationalName"
+                                          Immediate="true" Required="true"
+                                          Error="@(!string.IsNullOrEmpty(NinErrorMessages[encryptedCitizenshipForm.CountryCode]))"
+                                          ErrorText="@NinErrorMessages[encryptedCitizenshipForm.CountryCode]"
+                                          OnBlur="@(() => ValidateNIN(encryptedCitizenshipForm))" />
+                        </MudItem>
+                    </MudCardContent>
+                </MudCard>
+            </Virtualize>
+        </MudItem>
+    </MudGrid>
 
     @code {
-    string NinHelperText = string.Empty;
+    Dictionary<string, string> NinErrorMessages = new Dictionary<string, string>();
 
     List<EncryptedCitizenshipForm> EncryptedCitizenshipForms = new List<EncryptedCitizenshipForm>();
 
@@ -68,16 +70,28 @@
         foreach (var citizenship in userData.Citizenships)
         {
             EncryptedCitizenshipForms.Add(new EncryptedCitizenshipForm()
-            {
-                CountryName = citizenship.Name,
-                CountryCode = citizenship.Alpha3
-            });
+                {
+                    CountryName = citizenship.Name,
+                    CountryCode = citizenship.Alpha3
+                });
+
+            NinErrorMessages.Add(citizenship.Alpha3, string.Empty);
         }
     }
 
-    private string NINCheck(string arg)
+    private string ValidateNIN(EncryptedCitizenshipForm encryptedCitizenshipForm)
     {
-        return string.Empty;
-    }
+        string errorMessage = string.Empty;
+        string pattern = @"^[A-F0-9]+$";
+        Regex regex = new Regex(pattern);
 
+        if (!(regex.IsMatch(encryptedCitizenshipForm.Nin) && _content.NinPerCountryCode[encryptedCitizenshipForm.CountryCode].Digits == encryptedCitizenshipForm.Nin.Length))
+        {
+            errorMessage = $"National Identification Number (NIN) does not match length for country {encryptedCitizenshipForm.CountryCode}. Only capital letters (A-F) and numbers accepted";
+        }
+
+        NinErrorMessages[encryptedCitizenshipForm.CountryCode] = errorMessage;
+
+        return errorMessage;
+    }
 }
